ARMTemplates/MultiVirtualMachine/multivmtemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storage_account_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the storage account"
            }
        },
        "AccountType": {
           "type": "string",
           "metadata": {
                "description": "Storage account type"
            },
            "allowedValues" : [
                "Premium_LRS",
                "Premium_ZRS",
                "Standard_GRS",
                "Standard_GZRS",
                "Standard_LRS",
                "Standard_RAGRS",
                "Standard_RAGZRS",
                "Standard_ZRS"
            ],
            "defaultValue": "Standard_LRS"
        },
        "virtual_network_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual network"
            }
        },
        "virtual_machine_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual machine"
            }
        },
        "virtual_machine_size": {
           "type": "string",
           "metadata": {
                "description": "size of the virtual machine"
            }
        },
        "adminUser": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        },
        "adminPassword": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        },
         "count_value": {
           "type": "int"          
        }
    },
    "variables": {
        "tags": {
            "CreatedBy": "azureramakrishna@gmail.com",
            "Project": "SAANVIKIT",
            "Environment": "DEV",
            "CostCenter": "12355",
            "Department": "IT"
        },
        "virtual_network_address": ["172.16.0.0/24"],
        "subnet_name": "saanvikit-snet-01",
        "subnet_address": "172.16.0.0/27",
        "public_ip_address": "saanvikit-pubip-01",
        "nsg_name": "saanvikit-nsg-01",
        "nic_name": "saanvikit-nic-01"
    },
    "resources": [
        {
            "name": "[toLower(parameters('storage_account_name'))]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "properties": {
                "accountType": "[parameters('AccountType')]"
            }
        },
        {
            "name": "[parameters('virtual_network_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "dependsOn" : [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[variables('virtual_network_address')]"
                },
                "subnets": [
                    {
                        "name": "[variables('subnet_name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_address')]",
                            "networkSecurityGroup" : {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsg_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('public_ip_address'),copyIndex())]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "copy": {
                "name": "publicipCopy",
                "count": "[parameters('count_value')]"
                },
            "properties": {
                "publicIPAllocationMethod": "Dynamic"                
            }
        },
        {
            "name": "[variables('nsg_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "RDP Port",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "HTTP Port",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('nic_name'),copyIndex())]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('public_ip_address'),copyIndex()))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtual_network_name'))]"
            ],
            "tags": "[variables('tags')]",
            "copy": {
                "name": "nicCopy",
                "count": "[parameters('count_value')]"
                },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('public_ip_address'),copyIndex()))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtual_network_name'), variables('subnet_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('virtual_machine_name'),copyIndex())]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-03-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nic_name'),copyIndex()))]"
            ],
            "tags": "[variables('tags')]",
            "copy": {
                "name": "vmCopy",
                "count": "[parameters('count_value')]"
                },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('virtual_machine_size')]"
                },
                "osProfile": {
                    "computerName": "[concat(parameters('virtual_machine_name'),copyIndex())]",
                    "adminUsername": "[parameters('adminUser')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('virtual_machine_name'),copyIndex(),'-','osdisk')]",                     
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nic_name'),copyIndex()))]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {}
}
